...
            } else if let form = viewModel.state.form {
                formView(form)
            } else {
                RecordFormStyle.notFoundView(subject: "Ultrasound")
            }
        }
        .navigationTitle(viewModel.form?.isEditing == true ? "Edit Ultrasound" : "New Ultrasound")
        .navigationBarTitleDisplayMode(.inline)
        .toolbar {
            ToolbarItem(placement: .topBarTrailing) {
                Button {
                    viewModel.save()
                } label: {
...
