...
                    viewModel.save()
                } label: {
                    if viewModel.state.form?.isSaving == true {
                        ProgressView()
                            .scaleEffect(0.8)
                    } else {
                        Text("Save").fontWeight(.semibold)
                    }
                }
                .disabled(viewModel.state.form?.isSaving == true)
            }
        }
        .overlay(alignment: .top) {
...
        }
    }

    private func formView(_ form: MedicationFormState) -> some View {
        List {
            Section {
                TextField("Name", text: Binding(
                    get: { form.name },
                    set: { viewModel.onNameChange($0) }
                ))
                .textCase(nil)

                if let nameError = form.nameError {
...
